data/derived/fa15/progs/unify/prog2830.ml.out
Characters 121-144:
  List.fold_left f base l;;
  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list
       but an expression was expected of type string
